# mellow

./: .gitignore  AGENT.md  build.sh  docker-compose.yml  需求清单1.0.md  需求清单2.0.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  setup_flutter.py
backend/src/mellow/: __init__.py  config.py  di.py  exceptions.py  models.py
backend/src/mellow/agent/: __init__.py  base.py  chat_agent.py  orchestrator.py  reflect_agent.py  teach_agent.py  tool_registry.py
backend/src/mellow/agent/prompts/: chat.py  orchestrator.py  reflect.py  teach.py
backend/src/mellow/api/: deps.py
backend/src/mellow/auth/: __init__.py  jwt_auth.py  middleware.py  models.py
backend/src/mellow/db/: __init__.py  base.py  engine.py  init_db.py
backend/src/mellow/embedding/: __init__.py
backend/src/mellow/knowledge/: __init__.py
backend/src/mellow/llm/: __init__.py  client.py  router.py
backend/src/mellow/memory/: compression.py  learning_profile.py  models.py  persona_memory.py  proactive.py  scheduler.py  session_context.py
backend/src/mellow/persona/: manager.py
backend/src/mellow/providers/: __init__.py  asr.py  auth.py  embedding.py  knowledge.py  tts.py
backend/src/mellow/vector_store/: connection.py  memory_store.py  schemas.py
backend/src/mellow/voice/: __init__.py
backend/tests/: conftest.py  test_api_auth.py  test_api_chat_memory.py  test_api_persona_knowledge.py  test_api_profile.py  test_api_vocabulary.py  test_auth.py  test_chat_profile_apis.py
backend/tests/test_db/: __init__.py  test_auth_integration.py  test_engine.py  test_user_repo.py
(+303 files in other folders)
